# snake

Windows/: main.c
psvita/: CMakeLists.txt  main.c
psvita/sce_sys/livearea/contents/: template.xml
psvita/src/: main.c
psvita/src/resources/: gamedata.psarc  vita2d_sys.suprx  vitaSAS.suprx
psvita/src/resources/unpacked/: create_psarc.bat
psvita/src/resources/unpacked/tex/: texture.gxt
psvita/src/resources/unpacked/tex_unpacked/: create_gxt.bat  logo_gb.dds  logo_matrix.dds  logo_oled.dds
